# one-deploy

./: .ansible-lint.yml  .env.yml.sample  .gitignore  .gitmodules  COGNIT_DEPLOYMENT.md  Makefile  README.md  ansible.cfg  galaxy.yml  main.yml  one-deploy.sh  pre.yml  pyproject.toml  requirements.txt  requirements.yml  site.yml
.github/ISSUE_TEMPLATE/: bug-report.md
inv/: example.yml  shared.yml
inventory/: ceph-hci.yml  ceph.yml  evpn-ha.yml  example.yml  federation-master.yml  federation-parallel.yml  federation-slave1.yml  federation-slave2.yml  infra.yml  local.yml  pci_passthrough.yml  shared-generic.yml  shared.yml
inventory/group_vars/: ceph.yml  osds.yml
molecule/augeas-plugin/: converge.yml  destroy.yml  molecule.yml  prepare.yml  verify.yml
molecule/ceph-hci/: converge.yml  create.yml  molecule.yml
molecule/federation/: molecule.yml
molecule/federation-1st/: molecule.yml
molecule/federation-2nd/: molecule.yml
molecule/federation-ha/: converge.yml  molecule.yml
molecule/passenger-ha/: converge.yml  molecule.yml
molecule/prometheus-ha/: converge.yml  molecule.yml
molecule/ssl-ha/: molecule.yml
packaging/: pyproject.toml
playbooks/: augeas-plugin-test.yml  benchmark.yml  ceph.yml  cognit.yml  dpdk.yml  infra.yml  main.yml  passthrough.yaml  pre.yml  selinux.yml  site.yml  test_hosts  verification.yml
plugins/filter/: main.py  to_one.yml
plugins/module_utils/: cfgtool.py  main.py
plugins/modules/: augeas.py  augeas_module.py  augtool.py  cfgtool.py  named_vm.py
plugins/test/: main.py  match_address.yml
roles/bastion/: README.md
roles/common/: README.md
roles/database/: README.md
roles/flow/: README.md
roles/form/: README.md
roles/gate/: README.md
roles/gui/: README.md
roles/infra/: README.md
roles/kvm/: README.md
roles/openvswitch/: README.md
roles/passthrough/: README-md  README.md
roles/precheck/: README.md
(+328 files in other folders)
