[project]
name = "one-deploy"
version = "0.0.0"
description = "OpenNebula Ansible Playbooks"
authors = ["OpenNebula <contact@opennebula.io>"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"

[dependency-groups]
packaging = [
  "ansible-core<2.17",
  "netaddr",
]

dev = [
  { include-group = "packaging" },
  "ansible-lint",
  "molecule",
  "pyone",
]

ceph = [
  "ansible-core<2.17",
  "netaddr",
  "molecule",
  "pyone",
  "setuptools",
]

[tool.hatch.envs.default]
skip-install = true
installer = "uv"
dependency-groups = [ "dev" ]

[tool.hatch.envs.ceph]
skip-install = true
installer = "uv"
dependency-groups = [ "ceph" ]
